--- a/Lyrics.html
+++ b/Lyrics.html
@@ -5,7 +5,7 @@
     <body style="text-align: center;">
         <h1>"G Wolf"</h1>
         <img src="Flow G.jpg" alt="Flow G image" />
-        <hr color="red">
+        <hr color="red">qerW
         <p>Alam ko na isa 'to sa na-miss niyo yung ako'y magpaka-beast pero atleast
             Lagi pa rin nasa list kahit walang ni-release yung mga diss
             Buti na lang natiis ko kahit nakaka-inis
